--- a/app/src/main/res/layout/activity_spalsh_screen.xml
+++ b/app/src/main/res/layout/activity_spalsh_screen.xml
@@ -21,6 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/app_logo_animation"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/app_name"
         android:textColor="@color/colorPrimary"
         android:textSize="30sp"
